Corrected the alignment of the toggle btn

--- a/style.css
+++ b/style.css
@@ -95,3 +95,13 @@ h1{
     margin: 0;
     color: #777;
 }
+
+/* Create Class Form */
+.day-button{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3px;
+}
